tests/main_tests/ui/assert_any_ui_err.rs
assert_cfg::any!{
    feature = "qux",
    feature = "bob",
    feature = "something",
}

assert_cfg::any!{}


fn main(){}